--- a/test_env.ipynb
+++ b/test_env.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'fullpath' is not defined",
+     "evalue": "name 'parser' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmujoco_py\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m model \u001b[39m=\u001b[39m mujoco_py\u001b[39m.\u001b[39mload_model_from_path(fullpath)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'fullpath' is not defined"
+      "Cell \u001b[0;32mIn[1], line 29\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmotion_imitation\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfig\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Config\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# parser = argparse.ArgumentParser()\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# parser.add_argument('--cfg', default=None)\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# parser.add_argument('--vis_model_file', default='mocap_v2_vis')\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# parser.add_argument('--azimuth', type=float, default=45)\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# parser.add_argument('--video_dir', default='out/videos/motion_im')\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m args \u001b[38;5;241m=\u001b[39m \u001b[43mparser\u001b[49m\u001b[38;5;241m.\u001b[39mparse_args()\n\u001b[1;32m     30\u001b[0m cfg \u001b[38;5;241m=\u001b[39m Config(args\u001b[38;5;241m.\u001b[39mcfg, \u001b[38;5;28;01mFalse\u001b[39;00m, create_dirs\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     31\u001b[0m cfg\u001b[38;5;241m.\u001b[39menv_start_first \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'parser' is not defined"
      ]
     }
    ],
