--- a/fsm.ipynb
+++ b/fsm.ipynb
@@ -42,6 +42,151 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Contact 0:\n",
+      "    Geom 1: floor\n",
+      "    Geom 2: None\n",
+      "    Force: [91.37111058 -2.17255162 -0.6999973 ]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 91.3996161087816\n",
+      "\n",
+      "  Contact 1:\n",
+      "    Geom 1: floor\n",
+      "    Geom 2: None\n",
+      "    Force: [22.92898177  3.00459171  0.81495939]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 23.139359007551\n",
+      "\n",
+      "  Contact 2:\n",
+      "    Geom 1: floor\n",
+      "    Geom 2: None\n",
+      "    Force: [14.87611341  0.26233094  0.21444097]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 14.87997152595105\n",
+      "\n",
+      "  Contact 3:\n",
+      "    Geom 1: floor\n",
+      "    Geom 2: None\n",
+      "    Force: [16.48376866  0.30819731  0.21804615]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 16.48809142838191\n",
+      "\n",
+      "  Contact 4:\n",
+      "    Geom 1: floor\n",
+      "    Geom 2: None\n",
+      "    Force: [26.30375281  1.24546546 -0.26364079]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 26.33454200754923\n",
+      "\n",
+      "  Contact 5:\n",
+      "    Geom 1: floor\n",
+      "    Geom 2: None\n",
+      "    Force: [17.40583204 -0.17751374 -0.04858161]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 17.40680500064851\n",
+      "\n",
+      "  Contact 6:\n",
+      "    Geom 1: floor\n",
+      "    Geom 2: None\n",
+      "    Force: [2.0866894  0.0789776  0.02452508]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 2.088327465975145\n",
+      "\n",
+      "  Contact 7:\n",
+      "    Geom 1: floor\n",
+      "    Geom 2: None\n",
+      "    Force: [1.93387992 0.03579901 0.01619491]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 1.9342790356555322\n",
+      "\n",
+      "  Contact 8:\n",
+      "    Geom 1: floor\n",
+      "    Geom 2: None\n",
+      "    Force: [68.55027124 -0.44402914 -1.49445508]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 68.56799723738014\n",
+      "\n",
+      "  Contact 9:\n",
+      "    Geom 1: floor\n",
+      "    Geom 2: None\n",
+      "    Force: [28.1582769   0.79027006 -0.51845019]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 28.17413486602531\n",
+      "\n",
+      "  Contact 10:\n",
+      "    Geom 1: floor\n",
+      "    Geom 2: None\n",
+      "    Force: [ 7.88412469  0.08188695 -0.20540048]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 7.887224920858473\n",
+      "\n",
+      "  Contact 11:\n",
+      "    Geom 1: None\n",
+      "    Geom 2: None\n",
+      "    Force: [8.05982427 0.         0.        ]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 8.059824274983841\n",
+      "\n",
+      "  Contact 12:\n",
+      "    Geom 1: None\n",
+      "    Geom 2: None\n",
+      "    Force: [8.05880886 0.         0.        ]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 8.058808862709402\n",
+      "\n",
+      "  Contact 13:\n",
+      "    Geom 1: None\n",
+      "    Geom 2: None\n",
+      "    Force: [3069.72886484    0.            0.        ]\n",
+      "    Torque: [0. 0. 0.]\n",
+      "    Magnitude: 3069.728864841449\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mujoco_py\n",
+    "import numpy as np\n",
+    "\n",
+    "# Assuming you have already loaded your model and created a simulation\n",
+    "model = mujoco_py.load_model_from_path(\"khrylib/assets/mujoco_models/mocap_v2_prothesis.xml\")\n",
+    "sim = mujoco_py.MjSim(model)\n",
+    "\n",
+    "# Run the simulation for a few steps\n",
+    "for _ in range(10000):\n",
+    "    sim.step()\n",
+    "\n",
+    "    # Print contact forces for each step\n",
+    "    # print(f\"Step {_}: Contact Forces\")\n",
+    "    \n",
+    "for i in range(sim.data.ncon):\n",
+    "        contact = sim.data.contact[i]\n",
+    "        \n",
+    "        # Get the contact force\n",
+    "        contact_force = np.zeros(6, dtype=np.float64)\n",
+    "        mujoco_py.functions.mj_contactForce(sim.model, sim.data, i, contact_force)\n",
+    "        \n",
+    "        # The first 3 elements are the force vector, the last 3 are the torque vector\n",
+    "        force = contact_force[:3]\n",
+    "        torque = contact_force[3:]\n",
+    "        \n",
+    "        print(f\"  Contact {i}:\")\n",
+    "        print(f\"    Geom 1: {sim.model.geom_id2name(contact.geom1)}\")\n",
+    "        print(f\"    Geom 2: {sim.model.geom_id2name(contact.geom2)}\")\n",
+    "        print(f\"    Force: {force}\")\n",
+    "        print(f\"    Torque: {torque}\")\n",
+    "        print(f\"    Magnitude: {np.linalg.norm(force)}\")\n",
+    "        print()    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
