--- a/freezeknee_oldpolicy.ipynb
+++ b/freezeknee_oldpolicy.ipynb
@@ -57,7 +57,7 @@
     "env.seed(cfg.seed)\n",
     "\n",
     "body_qposaddr_list_start_index = [idxs[0] for idxs in list(env.body_qposaddr.values())]\n",
-    "knee_idx = body_qposaddr_list_start_index[2]\n",
+    "env.knee_id = body_qposaddr_list_start_index[2]\n",
     "\n",
     "\n",
     "env_f = HumanoidEnvFreezeKnee(cfg_f, cfg)\n",
@@ -108,7 +108,7 @@
     "        assert np.allclose(env_f.init_qpos_f, env_f.data.qpos), \"init_qpos[1] != qpos[0,1]\"\n",
     "\n",
     "        # state_f_qpos, state_f_qvel = state_f[:env_f.data.qpos.shape[0]], state_f[env_f.data.qpos.shape[0]:]\n",
-    "        # state_old = np.concatenate([state_f_qpos[:knee_idx ], np.zeros(4),state_f_qpos[knee_idx:], state_f_qvel[:knee_idx ], np.zeros(4), state_f_qvel[knee_idx:], 0.*np.ones(1)])\n",
+    "        # state_old = np.concatenate([state_f_qpos[:env.knee_id ], np.zeros(4),state_f_qpos[env.knee_id:], state_f_qvel[:env.knee_id ], np.zeros(4), state_f_qvel[env.knee_id:], 0.*np.ones(1)])\n",
     "        if running_state is not None:\n",
     "            state = running_state(state, update=False)\n",
     "        for t in range(75): \n",
@@ -123,7 +123,7 @@
     "                epos[3:7] = quaternion_multiply(cycle_h, epos[3:7])\n",
     "            poses['gt'].append(epos) \n",
     "            qpos = env_f.data.qpos.copy()\n",
-    "            qpos = np.concatenate([qpos[:knee_idx ], np.zeros(4),qpos[knee_idx:]])\n",
+    "            qpos = np.concatenate([qpos[:env.knee_id ], np.zeros(4),qpos[env.knee_id:]])\n",
     "            poses['pred'].append(qpos)\n",
     "            \n",
     "            state_var = tensor(state, dtype=dtype).unsqueeze(0)\n",
