--- a/prothesis_oldpolicy.ipynb
+++ b/prothesis_oldpolicy.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "\n",
     "body_qposaddr_list_start_index = [idxs[0] for idxs in list(env.body_qposaddr.values())]\n",
-    "knee_idx = body_qposaddr_list_start_index[2]\n",
+    "env.knee_id = body_qposaddr_list_start_index[2]\n",
     "\n",
     "\n",
     "# Example usage:\n",
@@ -152,7 +152,7 @@
     "                epos[3:7] = quaternion_multiply(cycle_h, epos[3:7])\n",
     "            poses['gt'].append(epos) \n",
     "            qpos = env_p.data.qpos.copy()\n",
-    "            qpos = np.concatenate([qpos[:knee_idx+1], np.zeros(2), qpos[knee_idx+1:]])\n",
+    "            qpos = np.concatenate([qpos[:env.knee_id+1], np.zeros(2), qpos[env.knee_id+1:]])\n",
     "            poses['pred'].append(qpos)\n",
     "            \n",
     "            state_var = tensor(state, dtype=dtype).unsqueeze(0)\n",
