--- a/prothesis_oldpolicy.ipynb
+++ b/prothesis_oldpolicy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "from khrylib.rl.core.policy_gaussian import PolicyGaussian\n",
     "from khrylib.rl.core.critic import Value\n",
     "from khrylib.models.mlp import MLP\n",
-    "from motion_imitation.envs.humanoid_im import HumanoidEnv, HumanoidEnvProthesis\n",
+    "from motion_imitation.envs.humanoid_im import HumanoidEnv\n",
+    "from motion_imitation.envs.humanoid_pk import HumanoidEnvProthesis\n",
     "from motion_imitation.utils.config import Config \n",
     "import matplotlib.pyplot as plt\n",
     "import glfw"
@@ -27,14 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "loading model from checkpoint: results/motion_im/0202/models/iter_0800.p\n",
       "loading model from checkpoint: results/motion_im/0202/models/iter_0800.p\n"
      ]
     }
@@ -89,21 +89,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "No \"joint\" with name hi exists. Available \"joint\" names = ('root', 'lfemur_z', 'lfemur_y', 'lfemur_x', 'knee', 'ankle', 'rfemur_z', 'rfemur_y', 'rfemur_x', 'rtibia_x', 'rfoot_z', 'rfoot_y', 'rfoot_x', 'upperback_z', 'upperback_y', 'upperback_x', 'lowerneck_z', 'lowerneck_y', 'lowerneck_x', 'lclavicle_z', 'lclavicle_y', 'lhumerus_z', 'lhumerus_y', 'lhumerus_x', 'lradius_x', 'rclavicle_z', 'rclavicle_y', 'rhumerus_z', 'rhumerus_y', 'rhumerus_x', 'rradius_x').",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m phase_name \u001b[38;5;129;01min\u001b[39;00m phase_list: \n\u001b[1;32m      8\u001b[0m     env_p\u001b[38;5;241m.\u001b[39mOSL_CTRL\u001b[38;5;241m.\u001b[39mset_osl_param( phase_name, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgain\u001b[39m\u001b[38;5;124m'\u001b[39m,  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mankle_stiffness\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m0\u001b[39m , mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m \u001b[43menv_p\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msim\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_joint_qvel_addr\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhi\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32mwrappers.pxi:1210\u001b[0m, in \u001b[0;36mmujoco_py.cymj.PyMjModel.get_joint_qvel_addr\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mwrappers.pxi:1031\u001b[0m, in \u001b[0;36mmujoco_py.cymj.PyMjModel.joint_name2id\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: No \"joint\" with name hi exists. Available \"joint\" names = ('root', 'lfemur_z', 'lfemur_y', 'lfemur_x', 'knee', 'ankle', 'rfemur_z', 'rfemur_y', 'rfemur_x', 'rtibia_x', 'rfoot_z', 'rfoot_y', 'rfoot_x', 'upperback_z', 'upperback_y', 'upperback_x', 'lowerneck_z', 'lowerneck_y', 'lowerneck_x', 'lclavicle_z', 'lclavicle_y', 'lhumerus_z', 'lhumerus_y', 'lhumerus_x', 'lradius_x', 'rclavicle_z', 'rclavicle_y', 'rhumerus_z', 'rhumerus_y', 'rhumerus_x', 'rradius_x')."
-     ]
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -114,62 +111,92 @@
     "n_sets = env_p.OSL_CTRL.n_sets\n",
     "\n",
     "for phase_name in phase_list: \n",
-    "    env_p.OSL_CTRL.set_osl_param( phase_name, 'gain',  'ankle_stiffness', 0 , mode=0)\n"
+    "    env_p.OSL_CTRL.set_osl_param( phase_name, 'gain',  'ankle_stiffness', 0 , mode=0)\n",
+    "env_p.sim.model.get_joint_qvel_addr(\"knee\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 0,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21,\n",
-       "        22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35],\n",
-       "       dtype=int32),\n",
-       " array([ 0,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21,\n",
-       "        22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37],\n",
-       "       dtype=int32),\n",
-       " {'root': (0, 7),\n",
-       "  'lfemur': (7, 10),\n",
-       "  'ltibia': (10, 11),\n",
-       "  'lfoot': (11, 14),\n",
-       "  'rfemur': (14, 17),\n",
-       "  'rtibia': (17, 18),\n",
-       "  'rfoot': (18, 21),\n",
-       "  'upperback': (21, 24),\n",
-       "  'lowerneck': (24, 27),\n",
-       "  'lclavicle': (27, 29),\n",
-       "  'lhumerus': (29, 32),\n",
-       "  'lradius': (32, 33),\n",
-       "  'rclavicle': (33, 35),\n",
-       "  'rhumerus': (35, 38),\n",
-       "  'rradius': (38, 39)},\n",
-       " {'root': (0, 7),\n",
-       "  'lfemur': (7, 10),\n",
-       "  'ltibia': (10, 11),\n",
-       "  'lfoot': (11, 12),\n",
-       "  'rfemur': (12, 15),\n",
-       "  'rtibia': (15, 16),\n",
-       "  'rfoot': (16, 19),\n",
-       "  'upperback': (19, 22),\n",
-       "  'lowerneck': (22, 25),\n",
-       "  'lclavicle': (25, 27),\n",
-       "  'lhumerus': (27, 30),\n",
-       "  'lradius': (30, 31),\n",
-       "  'rclavicle': (31, 33),\n",
-       "  'rhumerus': (33, 36),\n",
-       "  'rradius': (36, 37)})"
+       "(array([ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        , -0.16615273,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        , -1.63407324,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ]),\n",
+       " 0.16615272679598217,\n",
+       " 0.0,\n",
+       " 1.6340732404600256,\n",
+       " 0.0)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env_p.sim.model.jnt_dofadr, env.sim.model.jnt_dofadr, env.body_qposaddr, env_p.body_qposaddr\n"
+    "env_p.get_full_obs() - env.get_full_obs(), env.get_full_obs()[9], env_p.get_full_obs()[9], env.get_full_obs()[47], env_p.get_full_obs()[47]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((30,), (32,))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.body_qposaddr, env_p.body_qposaddr\n",
+    "state_p = env_p.reset()\n",
+    "state = env.reset() \n",
+    "env_p.get_osl_sens()\n",
+    "env_p.compute_torque(np.zeros(30)).shape, env.compute_torque(np.zeros(32)).shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'mujoco_py.cymj.PyMjModel' object has no attribute 'actuator_actadr'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m env_p\u001b[38;5;241m.\u001b[39msim\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mactuator_names, \u001b[43menv_p\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msim\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mactuator_actadr\u001b[49m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'mujoco_py.cymj.PyMjModel' object has no attribute 'actuator_actadr'"
+     ]
+    }
+   ],
+   "source": [
+    "env_p.sim.model.actuator_names, env_p.sim.model.actuator_actadr"
    ]
   },
   {
@@ -246,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -255,16 +282,40 @@
        "(array([-1,  0, -1,  1,  4,  5, -1,  6,  9, 10, -1, 13, -1, 16, -1, -1, 19,\n",
        "        21, 24, -1, 25, 27, 30, -1], dtype=int32),\n",
        " array([-1,  0, -1,  1,  4,  5, -1,  8, 11, 12, -1, 15, -1, 18, -1, -1, 21,\n",
-       "        23, 26, -1, 27, 29, 32, -1], dtype=int32))"
+       "        23, 26, -1, 27, 29, 32, -1], dtype=int32),\n",
+       " ('world',\n",
+       "  'root',\n",
+       "  'lhipjoint',\n",
+       "  'lfemur',\n",
+       "  'ltibia',\n",
+       "  'lfoot',\n",
+       "  'rhipjoint',\n",
+       "  'rfemur',\n",
+       "  'rtibia',\n",
+       "  'rfoot',\n",
+       "  'lowerback',\n",
+       "  'upperback',\n",
+       "  'thorax',\n",
+       "  'lowerneck',\n",
+       "  'upperneck',\n",
+       "  'head',\n",
+       "  'lclavicle',\n",
+       "  'lhumerus',\n",
+       "  'lradius',\n",
+       "  'lwrist',\n",
+       "  'rclavicle',\n",
+       "  'rhumerus',\n",
+       "  'rradius',\n",
+       "  'rwrist'))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env_p.sim.model.body_jntadr, env.sim.model.body_jntadr, , env.sim.model.body_names"
+    "env_p.sim.model.body_jntadr, env.sim.model.body_jntadr, env.sim.model.body_names"
    ]
   },
   {
