forces not directly show the actuation. actuation only propotional to ctrl

--- a/prothesis_oldpolicy.ipynb
+++ b/prothesis_oldpolicy.ipynb
@@ -30,15 +30,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "loading model from checkpoint: results/motion_im/0202/models/iter_0800.p\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cfg = Config('0202', False, create_dirs=False)\n",
     "cfg_p = Config('0202_prothesis', False, create_dirs=False)\n",
@@ -61,7 +53,7 @@
     "\n",
     "\n",
     "# Example usage:\n",
-    "# plot_qpos(qpos, body_qposaddr_list_start_index, body_qposaddr)\n",
+    "# visualize_qpos(qpos, body_qposaddr_list_start_index, body_qposaddr)\n",
     "\n",
     "\n",
     "\n",
@@ -76,6 +68,46 @@
     "state_dim_f = env_p.observation_space.shape[0]\n",
     "action_dim_f = env_p.action_space.shape[0]\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, 6)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "action_dim, state_dim\n",
+    "env.cfg.residual_force_torque, env.vf_dim\n",
+    "env_p.body_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "loading model from checkpoint: results/motion_im/0202/models/iter_0800.p\n",
+      "loading model from checkpoint: results/motion_im/0202/models/iter_0800.p\n"
+     ]
+    }
+   ],
+   "source": [
     "\"\"\"load learner policy\"\"\"\n",
     "policy_net = PolicyGaussian(MLP(state_dim, cfg.policy_hsize, cfg.policy_htype), action_dim, log_std=cfg.log_std, fix_std=cfg.fix_std)\n",
     "value_net = Value(MLP(state_dim, cfg.value_hsize, cfg.value_htype))\n",
@@ -84,12 +116,12 @@
     "model_cp = pickle.load(open(cp_path, \"rb\"))\n",
     "policy_net.load_state_dict(model_cp['policy_dict'])\n",
     "value_net.load_state_dict(model_cp['value_dict'])\n",
-    "running_state = model_cp['running_state']\n"
+    "running_state = model_cp['running_state']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +130,7 @@
        "9"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
