from lower limb to full body for nrel dataset and rfc vis

--- a/prothesis_oldpolicy.ipynb
+++ b/prothesis_oldpolicy.ipynb
@@ -77,20 +77,26 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(True, 6)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'action_dim' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43maction_dim\u001b[49m, state_dim\n\u001b[1;32m      2\u001b[0m env\u001b[38;5;241m.\u001b[39mcfg\u001b[38;5;241m.\u001b[39mresidual_force_torque, env\u001b[38;5;241m.\u001b[39mvf_dim\n\u001b[1;32m      3\u001b[0m env_p\u001b[38;5;241m.\u001b[39msim\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mbody_names\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'action_dim' is not defined"
+     ]
     }
    ],
    "source": [
     "action_dim, state_dim\n",
     "env.cfg.residual_force_torque, env.vf_dim\n",
-    "env_p.body_name"
+    "env_p.sim.model.body_names\n",
+    "# Print the body tree in the desired format\n",
+    "print(\"self.body_tree = {\")\n",
+    "for parent, children in env_p.body_tree.items():\n",
+    "    print(f\"    '{parent}': {children if children else []},\")\n",
+    "print(\"}\")"
    ]
   },
   {
