start adding impedance into states

--- a/prothesis_oldpolicy.ipynb
+++ b/prothesis_oldpolicy.ipynb
@@ -21,6 +21,7 @@
     "from khrylib.models.mlp import MLP\n",
     "from motion_imitation.envs.humanoid_im import HumanoidEnv\n",
     "from motion_imitation.envs.humanoid_pk import HumanoidEnvProthesis\n",
+    "from motion_imitation.envs.humanoid_ia import HumanoidImpAwareEnv\n",
     "from motion_imitation.utils.config import Config \n",
     "import matplotlib.pyplot as plt\n",
     "import glfw"
@@ -34,6 +35,7 @@
    "source": [
     "cfg = Config('0202', False, create_dirs=False)\n",
     "cfg_p = Config('0202_prothesis', False, create_dirs=False)\n",
+    "\n",
     "cfg.env_start_first = True\n",
     "cfg_p.env_start_first = True\n",
     "logger = create_logger(os.path.join(cfg.log_dir, 'log_eval.txt'))\n",
@@ -44,6 +46,7 @@
     "torch.manual_seed(cfg.seed)\n",
     "torch.set_grad_enabled(False)\n",
     "env = HumanoidEnv(cfg)\n",
+    "env_ia = HumanoidImpAwareEnv(cfg)\n",
     "env.seed(cfg.seed)\n",
     "\n",
     "\n",
@@ -69,6 +72,27 @@
     "action_dim_f = env_p.action_space.shape[0]\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((32,), (32,))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env_ia.jkp, env_ia.jkd \n",
+    "env_ia.jkp.shape, env_ia.jkd.shape "
    ]
   },
   {
