Explored changing impedance parameters as actions during RL

--- a/prothesis_oldpolicy.ipynb
+++ b/prothesis_oldpolicy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,23 +76,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((32,), (32,))"
+       "({'world': 0.0,\n",
+       "  'root': 5.575279762570686,\n",
+       "  'lhipjoint': 0.0,\n",
+       "  'lfemur': 3.3590926099454372,\n",
+       "  'ltibia': 1.726213080085354,\n",
+       "  'lfoot': 1.23264,\n",
+       "  'rhipjoint': 0.0,\n",
+       "  'rfemur': 3.3590926099454372,\n",
+       "  'rtibia': 1.726213080085354,\n",
+       "  'rfoot': 1.23264,\n",
+       "  'lowerback': 0.0,\n",
+       "  'upperback': 1.4367550402417326,\n",
+       "  'thorax': 4.188790204786391,\n",
+       "  'lowerneck': 2.1446605848506324,\n",
+       "  'upperneck': 0.0,\n",
+       "  'head': 0.0,\n",
+       "  'lclavicle': 0.6953471317191771,\n",
+       "  'lhumerus': 0.8359806325536322,\n",
+       "  'lradius': 0.3976078202199582,\n",
+       "  'lwrist': 0.26808257310632905,\n",
+       "  'rclavicle': 0.6953471317191771,\n",
+       "  'rhumerus': 0.8359806325536322,\n",
+       "  'rradius': 0.3976078202199582,\n",
+       "  'rwrist': 0.26808257310632905},\n",
+       " True)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "env_ia.jkp, env_ia.jkd \n",
-    "env_ia.jkp.shape, env_ia.jkd.shape "
+    "env_ia.jkp.shape, env_ia.jkd.shape \n",
+    "bdnames, bdmass = env_ia.model.body_names, env_ia.model.body_mass #, env_ia.model.body_subtreemass  # Index 0 gives mass of entire system\n",
+    "{bdnames[i]: bdmass[i] for i in range(len(bdnames))}, np.allclose(np.sum(np.array(bdmass)), env_ia.model.body_subtreemass[0])  # Total mass of the system\n"
    ]
   },
   {
