scale model within humanoid_im human-like by, changing h, m

--- a/prothesis_oldpolicy.ipynb
+++ b/prothesis_oldpolicy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,6 @@
     "import subprocess\n",
     "import shutil\n",
     "sys.path.append(os.getcwd())\n",
-    "\n",
     "from khrylib.utils import *\n",
     "from khrylib.rl.utils.visualizer import Visualizer\n",
     "from khrylib.rl.core.policy_gaussian import PolicyGaussian\n",
@@ -29,9 +28,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Height and Mass not assigned in config file\n",
+      "Scaling the model size to 1.75 meters\n",
+      "Saving the scaled model to /home/xliu227/Github/RFC/khrylib/assets/mujoco_models/mocap_v2_height_scaled.xml\n",
+      "lowerTrunk: 11.617500000000001\n",
+      "mass of Pelvis: 8.8725\n",
+      "mass of UpperLeg: 10.8525\n",
+      "mass of LowerLeg: 3.4274999999999998\n",
+      "mass of Toe: 0.9974999999999999\n",
+      "mass of UpperLeg: 10.8525\n",
+      "mass of LowerLeg: 3.4274999999999998\n",
+      "mass of Toe: 0.9974999999999999\n",
+      "mass of UpperTrunk: 3.9225\n",
+      "mass of LowerTrunk: 11.617500000000001\n",
+      "mass of Neck: 5.1075\n",
+      "mass of Shoulder: 3.9225\n",
+      "mass of UpperArm: 1.9725000000000001\n",
+      "mass of ForeArm: 1.125\n",
+      "mass of Hand: 0.4425\n",
+      "mass of Shoulder: 3.9225\n",
+      "mass of UpperArm: 1.9725000000000001\n",
+      "mass of ForeArm: 1.125\n",
+      "mass of Hand: 0.4425\n",
+      "Scaled model is saved at  /home/xliu227/Github/RFC/khrylib/assets/mujoco_models/mocap_v2_all_scacled.xml\n",
+      "scaled height: 1.7500000000000004\n",
+      "Scaling torque related parameters by 3.3182893115883765\n"
+     ]
+    }
+   ],
    "source": [
     "cfg = Config('0202', False, create_dirs=False)\n",
     "cfg_p = Config('0202_prothesis', False, create_dirs=False)\n",
@@ -46,6 +77,60 @@
     "torch.manual_seed(cfg.seed)\n",
     "torch.set_grad_enabled(False)\n",
     "env = HumanoidEnv(cfg)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(74.99999999999999, 1.7500000000000004)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "sys.path.append(\"/home/xliu227/Github/human-model-generator/code/\")\n",
+    "from write_xml import calculate_humanoid_height\n",
+    "sum(env.model.body_mass), calculate_humanoid_height(\"/home/xliu227/Github/RFC/khrylib/assets/mujoco_models/mocap_v2_all_scacled.xml\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "The standard model file should be mocap_v2, instead it is /home/xliu227/Github/RFC/khrylib/assets/mujoco_models/mocap_v2_all_scacled.xml",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m env_ia \u001b[38;5;241m=\u001b[39m \u001b[43mHumanoidImpAwareEnv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcfg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m env\u001b[38;5;241m.\u001b[39mseed(cfg\u001b[38;5;241m.\u001b[39mseed)\n\u001b[1;32m      6\u001b[0m body_qposaddr_list_start_index \u001b[38;5;241m=\u001b[39m [idxs[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m idxs \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(env\u001b[38;5;241m.\u001b[39mbody_qposaddr\u001b[38;5;241m.\u001b[39mvalues())]\n",
+      "File \u001b[0;32m~/Github/RFC/motion_imitation/envs/humanoid_ia.py:20\u001b[0m, in \u001b[0;36mHumanoidImpAwareEnv.__init__\u001b[0;34m(self, cfg)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, cfg):\n\u001b[0;32m---> 20\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcfg\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Github/RFC/motion_imitation/envs/humanoid_im.py:24\u001b[0m, in \u001b[0;36mHumanoidEnv.__init__\u001b[0;34m(self, cfg)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, cfg):\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m cfg\u001b[38;5;241m.\u001b[39mH \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m cfg\u001b[38;5;241m.\u001b[39mM \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 24\u001b[0m         \u001b[38;5;28;01massert\u001b[39;00m cfg\u001b[38;5;241m.\u001b[39mmujoco_model_file \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmocap_v2.xml\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe standard model file should be mocap_v2, instead it is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcfg\u001b[38;5;241m.\u001b[39mmujoco_model_file\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     25\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m path\u001b[38;5;241m.\u001b[39mexists(cfg\u001b[38;5;241m.\u001b[39mmujoco_model_file):\n\u001b[1;32m     26\u001b[0m             \u001b[38;5;66;03m# try the default assets path\u001b[39;00m\n\u001b[1;32m     27\u001b[0m             fullpath \u001b[38;5;241m=\u001b[39m path\u001b[38;5;241m.\u001b[39mjoin(Path(\u001b[38;5;18m__file__\u001b[39m)\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39mparent, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mkhrylib/assets/mujoco_models\u001b[39m\u001b[38;5;124m'\u001b[39m, path\u001b[38;5;241m.\u001b[39mbasename(cfg\u001b[38;5;241m.\u001b[39mmujoco_model_file))\n",
+      "\u001b[0;31mAssertionError\u001b[0m: The standard model file should be mocap_v2, instead it is /home/xliu227/Github/RFC/khrylib/assets/mujoco_models/mocap_v2_all_scacled.xml"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "env_ia = HumanoidImpAwareEnv(cfg)\n",
     "env.seed(cfg.seed)\n",
     "\n",
@@ -76,7 +161,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.,\n",
+       "        -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.,\n",
+       "        -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.],\n",
+       "       dtype=float32),\n",
+       " array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "        1., 1., 1., 1.], dtype=float32))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(env.sim.model.body_mass)\n",
+    "env.action_space.low, env.action_space.high"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -125,6 +237,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
@@ -151,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
