--- a/prothesis_oldpolicy.ipynb
+++ b/prothesis_oldpolicy.ipynb
@@ -82,18 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(74.99999999999999, 1.7500000000000004)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'HumanoidEnv' object has no attribute 'torque_lim'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mwrite_xml\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m calculate_humanoid_height\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28msum\u001b[39m(env\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mbody_mass), calculate_humanoid_height(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/xliu227/Github/RFC/khrylib/assets/mujoco_models/mocap_v2_all_scacled.xml\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m env\u001b[38;5;241m.\u001b[39mcfg\u001b[38;5;241m.\u001b[39mjkp, env\u001b[38;5;241m.\u001b[39mcfg\u001b[38;5;241m.\u001b[39mjkd, \u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtorque_lim\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# env.cfg.jkd\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'HumanoidEnv' object has no attribute 'torque_lim'"
+     ]
     }
    ],
    "source": [
@@ -102,7 +103,8 @@
     "sys.path.append(\"/home/xliu227/Github/human-model-generator/code/\")\n",
     "from write_xml import calculate_humanoid_height\n",
     "sum(env.model.body_mass), calculate_humanoid_height(\"/home/xliu227/Github/RFC/khrylib/assets/mujoco_models/mocap_v2_all_scacled.xml\")\n",
-    "\n"
+    "env.cfg.jkp, env.cfg.jkd, env.cfg.torque_lim\n",
+    "# env.cfg.jkd"
    ]
   },
   {
