training human model and visualize simulated torques and angles

--- a/prothesis_oldpolicy.ipynb
+++ b/prothesis_oldpolicy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,17 @@
       "scaled height: 1.7500000000000004\n",
       "Scaling torque related parameters by 3.3182893115883765\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -86,15 +97,134 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'HumanoidEnv' object has no attribute 'torque_lim'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mwrite_xml\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m calculate_humanoid_height\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28msum\u001b[39m(env\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mbody_mass), calculate_humanoid_height(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/xliu227/Github/RFC/khrylib/assets/mujoco_models/mocap_v2_all_scacled.xml\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m env\u001b[38;5;241m.\u001b[39mcfg\u001b[38;5;241m.\u001b[39mjkp, env\u001b[38;5;241m.\u001b[39mcfg\u001b[38;5;241m.\u001b[39mjkd, \u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtorque_lim\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# env.cfg.jkd\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'HumanoidEnv' object has no attribute 'torque_lim'"
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import mujoco\n",
+    "sim = env.sim\n",
+    "model = sim.model\n",
+    "# Example trajectory data\n",
+    "epos = env.get_expert_attr('qpos', env.get_expert_index(0)).copy()\n",
+    "# print(epos.shape)\n",
+    "if env.expert['meta']['cyclic']:\n",
+    "    init_pos = env.expert['init_pos']\n",
+    "    cycle_h = env.expert['cycle_relheading']\n",
+    "    cycle_pos = env.expert['cycle_pos']\n",
+    "    epos[:3] = quat_mul_vec(cycle_h, epos[:3] - init_pos) + cycle_pos\n",
+    "    epos[3:7] = quaternion_multiply(cycle_h, epos[3:7])\n",
+    "\n",
+    "\n",
+    "qpos_trajectory =  epos # Joint positions\n",
+    "qvel_trajectory =  np.zeros_like(epos) # Joint velocities\n",
+    "qacc_trajectory = np.zeros_like(epos)  # Joint accelerations\n",
+    "\n",
+    "# Compute inverse dynamics for each time step\n",
+    "torque_estimates = []\n",
+    "for qpos, qvel, qacc in zip(qpos_trajectory, qvel_trajectory, qacc_trajectory):\n",
+    "    sim.data.qpos[:] = qpos\n",
+    "    # sim.data.qvel[:] = qvel\n",
+    "    # sim.data.qacc[:] = qacc\n",
+    "    \n",
+    "    # mujoco.mj_inverse(model, sim.data)\n",
+    "    \n",
+    "    torque = sim.data.qfrc_inverse.copy()\n",
+    "    torque_estimates.append(torque)\n",
+    "\n",
+    "torque_estimates = np.array(torque_estimates)\n",
+    "# np.sum(torque_estimates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "self.body_tree = {\n",
+      "    'root': ['lhipjoint', 'rhipjoint', 'lowerback'],\n",
+      "    'lhipjoint': ['lfemur'],\n",
+      "    'lfemur': ['ltibia'],\n",
+      "    'ltibia': ['lfoot'],\n",
+      "    'lfoot': [],\n",
+      "    'rhipjoint': ['rfemur'],\n",
+      "    'rfemur': ['rtibia'],\n",
+      "    'rtibia': ['rfoot'],\n",
+      "    'rfoot': [],\n",
+      "    'lowerback': ['upperback'],\n",
+      "    'upperback': ['thorax'],\n",
+      "    'thorax': ['lowerneck'],\n",
+      "    'lowerneck': ['upperneck', 'lclavicle', 'rclavicle'],\n",
+      "    'upperneck': ['head'],\n",
+      "    'head': [],\n",
+      "    'lclavicle': ['lhumerus'],\n",
+      "    'lhumerus': ['lradius'],\n",
+      "    'lradius': ['lwrist'],\n",
+      "    'lwrist': [],\n",
+      "    'rclavicle': ['rhumerus'],\n",
+      "    'rhumerus': ['rradius'],\n",
+      "    'rradius': ['rwrist'],\n",
+      "    'rwrist': [],\n",
+      "}\n"
      ]
+    }
+   ],
+   "source": [
+    "print(\"self.body_tree = {\")\n",
+    "for parent, children in env.body_tree.items():\n",
+    "    print(f\"    '{parent}': {children if children else []},\")\n",
+    "print(\"}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1659.14465579, 1659.14465579, 1659.14465579, 1659.14465579,\n",
+       "        1327.31572464, 1327.31572464, 1327.31572464, 1659.14465579,\n",
+       "        1659.14465579, 1659.14465579, 1659.14465579, 1327.31572464,\n",
+       "        1327.31572464, 1327.31572464, 3318.28931159, 3318.28931159,\n",
+       "        3318.28931159,  663.65786232,  663.65786232,  663.65786232,\n",
+       "        1327.31572464, 1327.31572464, 1327.31572464, 1327.31572464,\n",
+       "        1327.31572464,  995.48679348, 1327.31572464, 1327.31572464,\n",
+       "        1327.31572464, 1327.31572464, 1327.31572464,  995.48679348]),\n",
+       " array([331.82893116, 331.82893116, 331.82893116, 331.82893116,\n",
+       "        265.46314493, 265.46314493, 265.46314493, 331.82893116,\n",
+       "        331.82893116, 331.82893116, 331.82893116, 265.46314493,\n",
+       "        265.46314493, 265.46314493, 663.65786232, 663.65786232,\n",
+       "        663.65786232, 132.73157246, 132.73157246, 132.73157246,\n",
+       "        265.46314493, 265.46314493, 265.46314493, 265.46314493,\n",
+       "        265.46314493, 199.0973587 , 265.46314493, 265.46314493,\n",
+       "        265.46314493, 265.46314493, 265.46314493, 199.0973587 ]),\n",
+       " array([663.65786232, 663.65786232, 663.65786232, 497.74339674,\n",
+       "        497.74339674, 497.74339674, 497.74339674, 663.65786232,\n",
+       "        663.65786232, 663.65786232, 497.74339674, 497.74339674,\n",
+       "        497.74339674, 497.74339674, 663.65786232, 663.65786232,\n",
+       "        663.65786232, 165.91446558, 165.91446558, 165.91446558,\n",
+       "        331.82893116, 331.82893116, 331.82893116, 331.82893116,\n",
+       "        331.82893116, 199.0973587 , 331.82893116, 331.82893116,\n",
+       "        331.82893116, 331.82893116, 331.82893116, 199.0973587 ]),\n",
+       " array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -103,7 +233,7 @@
     "sys.path.append(\"/home/xliu227/Github/human-model-generator/code/\")\n",
     "from write_xml import calculate_humanoid_height\n",
     "sum(env.model.body_mass), calculate_humanoid_height(\"/home/xliu227/Github/RFC/khrylib/assets/mujoco_models/mocap_v2_all_scacled.xml\")\n",
-    "env.cfg.jkp, env.cfg.jkd, env.cfg.torque_lim\n",
+    "env.cfg.jkp, env.cfg.jkd, env.cfg.torque_lim, env.sim.data.actuator_length\n",
     "# env.cfg.jkd"
    ]
   },
@@ -114,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,38 +324,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "({'world': 0.0,\n",
-       "  'root': 5.575279762570686,\n",
-       "  'lhipjoint': 0.0,\n",
-       "  'lfemur': 3.3590926099454372,\n",
-       "  'ltibia': 1.726213080085354,\n",
-       "  'lfoot': 1.23264,\n",
-       "  'rhipjoint': 0.0,\n",
-       "  'rfemur': 3.3590926099454372,\n",
-       "  'rtibia': 1.726213080085354,\n",
-       "  'rfoot': 1.23264,\n",
-       "  'lowerback': 0.0,\n",
-       "  'upperback': 1.4367550402417326,\n",
-       "  'thorax': 4.188790204786391,\n",
-       "  'lowerneck': 2.1446605848506324,\n",
-       "  'upperneck': 0.0,\n",
-       "  'head': 0.0,\n",
-       "  'lclavicle': 0.6953471317191771,\n",
-       "  'lhumerus': 0.8359806325536322,\n",
-       "  'lradius': 0.3976078202199582,\n",
-       "  'lwrist': 0.26808257310632905,\n",
-       "  'rclavicle': 0.6953471317191771,\n",
-       "  'rhumerus': 0.8359806325536322,\n",
-       "  'rradius': 0.3976078202199582,\n",
-       "  'rwrist': 0.26808257310632905},\n",
-       " True)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'env_ia' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43menv_ia\u001b[49m\u001b[38;5;241m.\u001b[39mjkp, env_ia\u001b[38;5;241m.\u001b[39mjkd \n\u001b[1;32m      2\u001b[0m env_ia\u001b[38;5;241m.\u001b[39mjkp\u001b[38;5;241m.\u001b[39mshape, env_ia\u001b[38;5;241m.\u001b[39mjkd\u001b[38;5;241m.\u001b[39mshape \n\u001b[1;32m      3\u001b[0m bdnames, bdmass \u001b[38;5;241m=\u001b[39m env_ia\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mbody_names, env_ia\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mbody_mass \u001b[38;5;66;03m#, env_ia.model.body_subtreemass  # Index 0 gives mass of entire system\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'env_ia' is not defined"
+     ]
     }
    ],
    "source": [
@@ -237,10 +344,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((32,), (32,))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.sim.data.actuator_length.shape, env.sim.data.actuator_force.shape"
+   ]
   },
   {
    "cell_type": "code",
@@ -263,11 +383,7 @@
     "action_dim, state_dim\n",
     "env.cfg.residual_force_torque, env.vf_dim\n",
     "env_p.sim.model.body_names\n",
-    "# Print the body tree in the desired format\n",
-    "print(\"self.body_tree = {\")\n",
-    "for parent, children in env_p.body_tree.items():\n",
-    "    print(f\"    '{parent}': {children if children else []},\")\n",
-    "print(\"}\")"
+    "# Print the body tree in the desired format\n"
    ]
   },
   {
