osl new class, refactored; able to recognize osl control phase; not able to apply, mag too small. phase visualize

--- a/prothesis_oldpolicy.ipynb
+++ b/prothesis_oldpolicy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,21 @@
     "from motion_imitation.envs.humanoid_ia import HumanoidImpAwareEnv\n",
     "from motion_imitation.utils.config import Config \n",
     "import matplotlib.pyplot as plt\n",
-    "import glfw"
+    "import glfw\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_name = f'0202_wo_phase_skeleton.mp4'\n",
+    "video_dir = f'./out/videos/normal_hw'\n",
+    "\n",
+    "frames_to_video(f'{video_dir}/frame_skeleton',video_dir, 30, out_name)\n"
    ]
   },
   {
